--- a/package.json
+++ b/package.json
@@ -10,16 +10,28 @@
   },
   "dependencies": {
     "@types/node": "20.11.27",
-    "@types/react": "18.2.65",
     "@types/react-dom": "18.2.22",
     "autoprefixer": "10.4.18",
+    "crypto": "^1.0.1",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.3",
+    "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
+    "mysql2": "^3.9.4",
     "next": "14.1.3",
     "postcss": "8.4.35",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^10.0.5",
     "tailwindcss": "3.4.1",
-    "typescript": "5.4.2"
+    "typescript": "5.4.2",
+    "winston": "^3.13.0",
+    "winston-daily-rotate-file": "^5.0.0"
+  },
+  "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/next": "^9.0.0",
+    "@types/react": "^18.2.66",
+    "daisyui": "^4.7.3"
   }
 }
